syntax = "proto3";

import "sys_core_models.proto";

package v2.sys_core.services;

option go_package = "github.com/amplify-cms/sys-share/sys-core/service/go/rpc/v2";

service FileService {
  rpc Upload(stream v2.sys_core.services.FileUploadRequest) returns (v2.sys_core.services.FileUploadResponse) {}
  rpc Download(v2.sys_core.services.FileDownloadRequest) returns (stream v2.sys_core.services.FileDownloadResponse) {}
}